--- a/index.html
+++ b/index.html
@@ -1,89 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" data-theme="dark">
 <head>
-	<title>My Resume</title>
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Przemysław Pakuła - Résumé</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<div class="wraper">
-		<div class="container">
-		<div class="left-content p-30">
-			<div class="logo">
-				<a href="index.html">
-					<span>My</span>
-					<span>Resume</span>
-				</a>
-			</div>
-			<div class="nav">
-				<ul>
-					<li><a href="#Home">Home</a></li>
-					<li><a href="#About">About</a></li>
-					<li><a href="">Work Profile</a></li>
-					<li><a href="">Portfolio</a></li>
-					<li><a href="">Education</a></li>
-					<li><a href="">Contact</a></li>
-				</ul>
-			</div>
-			<div class="left-footer">
-				<div class="social-icons">
-					<ul>
-						<li><a href=""><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-						<li><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-						<li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						<li><a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-					</ul>
-				</div>
-				<div class="foot-contact">
-					<ul>
-						<li>xxxxxxxxxxx@gmail.com</li>
-						<li>+91 90000XXXXX / 90XXXXXXXX</li>
-					</ul>
-				</div>
-				
-<div class="copy-rights">Copyright &copy;2019 All rights reserved</div>
-			</div>
-
-		</div>
-		<div class="main-content">
-			<div class="section1 p-30" id="Home">
-			<div class="sec-title">
-	<div class="pg-sub-title">Home</div>
-	<div class="pg-title">My Profile</div>
-			</div>
-				<div class="d-flex-align-center">
-				<div class="user-img flex-1"><img src="https://colorlib.com/preview/theme/meetme/img/personal.jpg"></div>
-				<div class="user-profile flex-1">
-					<div class="pro-details">
-						<div class="sm-text">HELLO EVERYBODY, I AM</div>
-						<div class="name">Pavan Ramshetty</div>
-						<div class="role">UI Developer</div>
-
-					</div>
-					<div class="text">You will begin to realise why this exercise is called the Dickens Pattern (with reference to the ghost showing Scrooge some different futures)</div>
-					<div class="pr-list">
-						<ul>
-							<li><i class="fa fa-calendar" aria-hidden="true"></i> 14th May, 1992</li>
-							<li><i class="fa fa-phone" aria-hidden="true"></i> 90000XXXXX / 90XXXXXXXX</li>
-							<li><i class="fa fa-envelope" aria-hidden="true"></i> xxxxxxxxxxxxxx@gmail.com</li>
-							<li><i class="fa fa-map-marker" aria-hidden="true"></i> Hyderabad, Telangana</li>
-						</ul>
-					</div>
-			<div class="social-icons-head">
-					<ul>
-						<li><a href=""><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-						<li><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-						<li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						<li><a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-					</ul>
-				</div>
-
-				</div>
-			</div>
-			</div>
-
-		</div>
-	</div>
-</div>
+    <div class="container">
+        <header>
+            <h1 id="name"></h1>
+            <button id="theme-toggle" aria-label="Switch to light theme">Switch to Light Mode</button>
+            <button id="pdf-export" aria-label="Export résumé as PDF">Export as PDF</button>
+        </header>
+        <section>
+            <h2>Professional Summary</h2>
+            <p>Experienced software developer with a passion for creating interactive web applications...</p>
+        </section>
+        <!-- Add more sections like Experience, Education, Skills as needed -->
+    </div>
+    <script src="scripts.js"></script>
 </body>
 </html>
