--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <div class="photo-container">
                 <!-- Replace 'photo.jpg' with the path to your actual photo -->
-                <img src="photo.jpg" alt="Przemysław Pakuła" class="profile-photo">
+                <img src="profile.jpg" alt="Przemysław Pakuła" class="profile-photo">
             </div>
             <div class="intro">
                 <h1 id="name"></h1>
