--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!doctype html>
 <html lang="en" class="no-js">
 <head>
-  <base target="_blank">
   <meta charset="UTF-8" />
   <title>Przemysław Pakuła</title>
-  <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
+  <link rel="shortcut icon" href="assets/tabicon.png" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" type="text/css">
-  <!-- remember, jQuery is completely optional -->
-  <!-- <script type='text/javascript' src='js/jquery-1.11.1.min.js'></script> -->
+  <!-- Include Typed.js from CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script type="text/javascript" src="js/jquery.particleground.js"></script>
   <script type="text/javascript" src="js/demo.js"></script>
 </head>
@@ -18,15 +17,44 @@
 
 <div id="particles">
   <div id="intro">
-      <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Przemysław Pakuła&nbsp<a href="deedy.pdf" style="color: white;"><img src="https://png.icons8.com/office/40/000000/open-resume.png" height="35" width="35"></a></h2>
-        <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
-    <a href="www.linkedin.com/in/ppakula89" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
-    &nbsp
-    <a href="https://www.facebook.com/profile.php?id=100000547075067" style="color: white;"><i class="fab fa-facebook" style="font-size: 2em;"></i></a>
-    &nbsp
-    <a href="https://github.com/przemyslawpakula" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
-    &nbsp
-    <a href="https://www.instagram.com/pakla89/" style="color: white;"><i class="fab fa-instagram" style="font-size: 2em;"></i></a>
+    <!-- Avatar/photo above the name -->
+    <img src="assets/profile.jpg" alt="Avatar" class="avatar" />
+    
+    <!-- Container for Typed.js effect -->
+    <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">
+      <span id="typed-name"></span>
+      &nbsp;
+      <!-- Clickable cv to download the CV -->
+      <a href="CV Przemysław Pakuła.pdf" download>
+        <img src="assets/cvicon.png" height="35" width="35" alt="Download CV">
+      </a>
+    </h2>
+    <h3 id="typed-title"></h3>
+
+    <!-- Red Separator -->
+    <hr class="separator">
+
+    <!-- Bio Section -->
+    <p class="bio">
+      I am an ambitious and determined individual, always striving to expand my horizons and acquire new skills and professional experience. I am hardworking, self-motivated, and a fast learner, capable of adapting to dynamic environments and effectively solving problems. I approach every task with professionalism, diligence, and great attention to detail. Additionally, I easily establish new connections and thrive in team-oriented environments.
+    </p>
+
+    <!-- Social Media Links -->
+    <a href="https://www.linkedin.com/in/ppakula89/" style="color: white;">
+      <i class="fab fa-linkedin" style="font-size: 2em;"></i>
+    </a>
+    &nbsp;
+    <a href="https://www.facebook.com/profile.php?id=100000547075067" style="color: white;">
+      <i class="fab fa-facebook" style="font-size: 2em;"></i>
+    </a>
+    &nbsp;
+    <a href="https://github.com/przemyslawpakula" style="color: white;">
+      <i class="fab fa-github" style="font-size: 2em;"></i>
+    </a>
+    &nbsp;
+    <a href="https://www.instagram.com/pakla89/" style="color: white;">
+      <i class="fab fa-instagram" style="font-size: 2em;"></i>
+    </a>
   </div>
 </div>
 
