Update Youtube link

--- a/index.html
+++ b/index.html
@@ -34,11 +34,6 @@
     <!-- Red Separator -->
     <hr class="separator">
 
-    <!-- Bio Section -->
-    <p class="bio">
-      I am an ambitious and determined individual, always striving to expand my horizons and acquire new skills and professional experience. I am hardworking, self-motivated, and a fast learner, capable of adapting to dynamic environments and effectively solving problems. I approach every task with professionalism, diligence, and great attention to detail. Additionally, I easily establish new connections and thrive in team-oriented environments.
-    </p>
-
     <!-- Social Media Links -->
     <a href="https://www.linkedin.com/in/ppakula89/" style="color: white;">
       <i class="fab fa-linkedin" style="font-size: 2em;"></i>
@@ -54,6 +49,10 @@
     &nbsp;
     <a href="https://www.instagram.com/pakla89/" style="color: white;">
       <i class="fab fa-instagram" style="font-size: 2em;"></i>
+    </a>
+    &nbsp;
+    <a href="https://www.youtube.com/watch?v=uSDAol7kJlY" style="color: white;">
+      <i class="fab fa-youtube" style="font-size: 2em;"></i>
     </a>
   </div>
 </div>
