--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="en" class="no-js">
 <head>
+  <meta property="og:title" content="Przemysław Pakuła">
+  <meta property="og:description" content="Portfolio and social links.">
+  <meta property="og:image" content="https://github.com/przemyslawpakula/przemyslawpakula.github.io/blob/main/assets/profile.jpg">
+  <meta property="og:url" content="https://przemyslawpakula.github.io/">
+  <meta property="og:type" content="website">
   <meta charset="UTF-8" />
   <title>Przemysław Pakuła</title>
   <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
