--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       <i class="fab fa-linkedin" style="font-size: 2em;"></i>
     </a>
     &nbsp;
-    <a href="https://www.facebook.com/profile.php?id=100000547075067" style="color: white;">
-      <i class="fab fa-facebook" style="font-size: 2em;"></i>
-    </a>
+    <a href="https://www.facebook.com/">
+      <img src="assets/media-facebook.svg" alt="Facebook" class="social-icon">
+    </a> 
     &nbsp;
     <a href="https://github.com/przemyslawpakula" style="color: white;">
       <i class="fab fa-github" style="font-size: 2em;"></i>
