--- a/index.html
+++ b/index.html
@@ -40,25 +40,25 @@
     <hr class="separator">
 
     <!-- Social Media Links -->
-    <a href="https://www.linkedin.com/in/ppakula89/" style="color: white;">
-      <i class="fab fa-linkedin" style="font-size: 2em;"></i>
-    </a>
+    <a href="https://www.linkedin.com/in/ppakula89/">
+      <img src="assets/media-linkedin.svg" alt="Linkedin" class="social-icon">
+    </a> 
     &nbsp;
     <a href="https://www.facebook.com/">
       <img src="assets/media-facebook.svg" alt="Facebook" class="social-icon">
     </a> 
     &nbsp;
-    <a href="https://github.com/przemyslawpakula" style="color: white;">
-      <i class="fab fa-github" style="font-size: 2em;"></i>
+    <a href="https://github.com/przemyslawpakula">
+      <img src="assets/media-github.svg" alt="Github" class="social-icon">
     </a>
     &nbsp;
-    <a href="https://www.instagram.com/pakla89/" style="color: white;">
-      <i class="fab fa-instagram" style="font-size: 2em;"></i>
+    <a href="https://www.instagram.com/pakla89/">
+      <img src="assets/media-instagram.svg" alt="Instagram" class="social-icon">
     </a>
     &nbsp;
-    <a href="https://www.youtube.com/watch?v=uSDAol7kJlY" style="color: white;">
-      <i class="fab fa-youtube" style="font-size: 2em;"></i>
-    </a>
+    <a href="https://www.youtube.com/watch?v=uSDAol7kJlY">
+      <img src="assets/media-youtube.svg" alt="Youtube" class="social-icon">
+    </a> 
   </div>
 </div>
 
