update facebook profile link

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <img src="assets/media-linkedin.svg" alt="Linkedin" class="social-icon">
     </a> 
     &nbsp;
-    <a href="https://www.facebook.com/">
+    <a href="https://www.facebook.com/profile.php?id=100000547075067">
       <img src="assets/media-facebook.svg" alt="Facebook" class="social-icon">
     </a> 
     &nbsp;
