--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta property="og:title" content="Przemysław Pakuła">
   <meta property="og:description" content="Portfolio and social links.">
-  <meta property="og:image" content="https://raw.githubusercontent.com/przemyslawpakula/przemyslawpakula.github.io/main/assets/profile.jpg">
+  <meta property="og:image" content="https://raw.githubusercontent.com/przemyslawpakula/przemyslawpakula.github.io/main/assets/thumbnail.png">
   <meta property="og:url" content="https://przemyslawpakula.github.io/">
   <meta property="og:type" content="website">
   <meta charset="UTF-8" />
